--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>HELLO!</h1>
             </div>
             <div class="name">
-                <h1><span style="color: white;">I'M</span>  DWI  HARINDA </br>LISMIANA</h1>
+                <h1><span style="color: rgb(0, 0, 0);">I'M</span>  DWI  HARINDA </br>LISMIANA</h1>
             </div>
             <div class="tittle">
                 <h1>UI/UX DESIGNER</h1>
@@ -44,7 +44,7 @@
 <section class="about-me" id="about-me">
     <div class="container-about-me">
         <div class="tittle-about-me">
-            <h1><span style="color: #fff;">About</span> Me</h1>
+            <h1><span style="color: #000000;">About</span> Me</h1>
         </div>
         <br>
         <div class="description">
