--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
             <div class="btn-download">
                 <button>Download CV</button>
             </div>
+            <div class="icon-all">
+                <div class="icon-frame">
+                    <a href="">
+                        <img src="Instagram.png" alt="">
+                    </a>
+                </div>
+                <div class="icon-frame">
+                    <a href="">
+                        <img src="Linkedin.png" alt="">
+                    </a>
+                </div>
+                <div class="icon-frame">
+                    <a href="">
+                        <img src="Github.png" alt="">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="right">
