--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
         </div>
     </div>
 </section>
+<section class="education" id="education">
+    <div class="container-education">
+        <div class="tittle-education">
+            <h1>Education & Skills</h1>
+        </div>
+        <div class="content-education">
+            <ul>
+                <li>SMP TELKOM PURWOKERTO (2020-2023)  = Saya menyelesaikan pendidikan di SMP Telkom Purwokerto, di mana saya memperoleh dasar pengetahuan dan keterampilan yang kuat dalam berbagai mata pelajaran umum, serta pengenalan terhadap teknologi informasi yang menjadi dasar bagi minat saya di bidang Rekayasa Perangkat Lunak.</li>
+                <li>SMK TELKOM PURWOKERTO (2024-2027) = Saat ini saya sedang menempuh pendidikan di SMK Telkom Purwokerto, jurusan Rekayasa Perangkat Lunak (RPL). Di sini, saya mempelajari berbagai aspek teknis dalam pengembangan perangkat lunak, termasuk pemrograman, desain aplikasi, serta pemeliharaan sistem perangkat lunak. Pendidikan ini memberi saya dasar yang kuat dalam dunia teknologi informasi yang akan sangat bermanfaat di dunia profesional.</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
