--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
                 <li>SMK TELKOM PURWOKERTO (2024-2027) = Saat ini saya sedang menempuh pendidikan di SMK Telkom Purwokerto, jurusan Rekayasa Perangkat Lunak (RPL). Di sini, saya mempelajari berbagai aspek teknis dalam pengembangan perangkat lunak, termasuk pemrograman, desain aplikasi, serta pemeliharaan sistem perangkat lunak. Pendidikan ini memberi saya dasar yang kuat dalam dunia teknologi informasi yang akan sangat bermanfaat di dunia profesional.</li>
             </ul>
         </div>
+        <div class="content-skills">
+            <div class="title-skills">
+                <h1>FRONT END</h1>
+            </div>
+            <div class="container-icon-skills">
+                <div class="icon-skills">
+                    <img src="image 6.png" alt="">
+                </div>
+                <div class="icon-skills">
+                    <img src="image 7.png" alt="">
+                </div>
+                <div class="icon-skills">
+                    <img style="width: 290px;" src="image 8.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
