--- a/index.html
+++ b/index.html
@@ -100,8 +100,33 @@
                     <img style="width: 290px;" src="image 8.png" alt="">
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="title-skills">
+                <h1>BACK END</h1>
+            </div>
+            <div class="container-icon-skills">
+                <div class="icon-skills">
+                    <img style="width: 269px; height: 139px;" src="image 9.png" alt="">
+                </div>
+                <div class="icon-skills">
+                    <img style="width: 268px; height: 145px;" src="image 10.png" alt="">
+                </div>
+                <div class="icon-skills">
+                    <img style="width: 317px;" src="image-removebg-preview 2.png" alt="">
+                </div>
         </div>
     </div>
+</section>
+<section class="contact" id="contact">
+
 </section>
 
 </body>
