--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
     </div>
 </section>
 <section class="contact" id="contact">
-
+    <div class="left-contact">
+        <div class="container-get-in-touch">
+            .
+            
+        </div>
+    </div>
 </section>
 
 </body>
