--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semester 2 pts</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header class="header">
@@ -13,9 +16,9 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about-me">About Me</a>
-            <a href="#">Education & Skill</a>
-            <a href="#">Portofolio</a>
-            <a href="#">Contact</a>
+            <a href="#education">Education & Skill</a>
+            <a href="#portfolio">Portofolio</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 <section class="home" id="home">
@@ -126,13 +129,54 @@
     </div>
 </section>
 <section class="contact" id="contact">
-    <div class="left-contact">
-        <div class="container-get-in-touch">
-            .
-            
+    <div class="title-contact">
+        <h1>Contact</h1>
+    </div>
+    <div class="container-contact">
+        <div class="left-contact">
+            <div class="container-get-in-touch">
+                <div class="title-get-in-touch">
+                    <h1>
+                        Get in touch!
+                    </h1>
+                </div>
+                <div class="form-contact">
+                    <form action="" method="post">
+                        <div class="form-fill">
+                            <label for="name">Name</label>
+                            <input name="name" type="text">
+                        </div>
+                        <div class="form-fill">
+                            <label for="email">Email</label>
+                            <input name="email" type="email">
+                        </div>
+                        <div class="form-fill">
+                            <label for="message">Message</label>
+                            <textarea name="message"></textarea>
+                        </div>
+                        <div class="button-send">
+                            <button>Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="right-contact">
+            <dotlottie-player
+              src="https://lottie.host/884f2b1f-8af8-4da3-b964-b9fcc7e2a04a/dQ5rnsEewg.lottie"
+              background="transparent"
+              speed="1"
+              style="width: 800px; height: 800px; transform: scaleX(-1);"
+              loop
+              autoplay
+            ></dotlottie-player>
         </div>
     </div>
 </section>
 
 </body>
+<script
+  src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+  type="module"
+></script>
 </html>
