--- a/index.html
+++ b/index.html
@@ -135,7 +135,15 @@
             <h1>Portofolio</h1>
         </div>
         <div class="content-porto">
-            
+            <br><br>
+            <section id="slider">
+                <input type="radio" name="slider" id="s1" checked>
+                <input type="radio" name="slider" id="s2">
+                <input type="radio" name="slider" id="s3">
+                <label for="s1" id="slide1"><img src="Desktop - 8 1.jpg" alt="Slide 1"></label>
+                <label for="s2" id="slide2"><img src="landing page 1.jpg" alt="Slide 2"></label>
+                <label for="s3" id="slide3"><img src="Screenshot 2025-02-20 191756 1.jpg" alt="Slide 3"></label>
+            </section>
         </div>
     </div>
 </section>
