--- a/index.html
+++ b/index.html
@@ -140,9 +140,13 @@
                 <input type="radio" name="slider" id="s1" checked>
                 <input type="radio" name="slider" id="s2">
                 <input type="radio" name="slider" id="s3">
+                <input type="radio" name="slider" id="s4">
+                <input type="radio" name="slider" id="s5">
                 <label for="s1" id="slide1"><img src="Desktop - 8 1.jpg" alt="Slide 1"></label>
                 <label for="s2" id="slide2"><img src="landing page 1.jpg" alt="Slide 2"></label>
                 <label for="s3" id="slide3"><img src="Screenshot 2025-02-20 191756 1.jpg" alt="Slide 3"></label>
+                <label for="s4" id="slide4"><img src="gedung sekolah.jpg" alt="Slide 4"></label>
+                <label for="s5" id="slide5"><img src="face.jpg" alt="Slide 5"></label>
             </section>
         </div>
     </div>
