--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 <h1>UI/UX DESIGNER</h1>
             </div>
             <div class="btn-download">
-                <button>Download CV</button>
+                <a href="Dwi-CV.pdf" download="dwi-CV">
+                    <button type="button">Download CV</button>
+                </a>
+            </div>
             </div>
             <div class="icon-all">
                 <div class="icon-frame">
